--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background: url(/img/BG.jpg) no-repeat center center;
+  background: url(https://inkognitod.github.io/paradigma.test/img/BG.jpg) no-repeat center center;
   background-size: cover;
   font-family: 'Montserrat';
   font-style: normal;
@@ -52,7 +52,7 @@ body {
 .header__top ul li:first-child {
   width: 40px;
   text-indent: -9999px;
-  background: url(/img/home.svg) no-repeat center;
+  background: url(https://inkognitod.github.io/paradigma.test/img/home.svg) no-repeat center;
 }
 
 .header__hr {
@@ -289,7 +289,7 @@ body {
   right: 30px;
   width: 20px;
   height: 20px;
-  background: url(/img/arrow.svg);
+  background: url(https://inkognitod.github.io/paradigma.test/img/arrow.svg);
 }
 
 .main .main__right .gift {
